edits and versions

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -39,6 +39,7 @@ title: 4. Exploration of the Formative Learning Design Process
             template](#using-a-starter-game-template)
             -   [Variable editing for player
                 movement](#variable-editing-for-player-movement)
+            -   [Simple block graphics](#simple-block-graphics)
             -   [Level design and
                 prototyping](#level-design-and-prototyping)
         -   [Design adaptations to facilitate novice use of a code
@@ -313,9 +314,9 @@ Following Barab's description of nested activity systems [-@barab_using_2002], t
 
 There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where the created games are shared in arcade cabinets at the end of the programme. An additional audience are friends and family who can be send the games to play online. The more immediate audience for the evolving games are peer game makers during the making sessions.
 
-![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater3.jpg){width=75%}
+![Carrot eater game with an self made arcade unit made from cardboard boxes](./Pictures/carroteater3.jpg){width=90%}
 
-While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which feed into the contradictions which emerge at this level of activity.
+While the broad aim of making a game to share is agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which feed into the contradictions which emerge at this level of activity.
 
 #### Illustrative vignette on participants activity indicating general activity of participants
 
@@ -623,19 +624,26 @@ I realised that to allow for this playful experimentation, a purely structural t
 A web code project using the chosen game framework
 phaser consists of several interlinked files of Javascript, HTML and CSS and image files. (see glossary & appendix 4.x)
 
-![simple game template](./Pictures/simple_game_template_3a.png){width=95%}
+<!-- ![simple game template](./Pictures/simple_game_template_3a.png){width=95%} -->
+<!--
+![simple game template web]({{ site.baseurl }}/Pictures/simple_game_template_3a.png) -->
 
-![simple game template web]({{ site.baseurl }}/Pictures/simple_game_template_3a.png)
+
+
+![simple game template](./Pictures/illustrations/template_annot.png){width=95%}
 
 4.x glitch coding environment with code structure of left menu, a central code window with code, comments and game preview on the right.
 
-![simple game template](./Pictures/illustrations/template_annot.png){width=95%}
-Annoated
+1. Javascript file which participants alter to make changes to their game
+2. Html page within which the game is embeded (not usually altered by participants)
+3. Css style sheet (not usually altered by participants)
+4. Code editing area
+5. Game preview area
 
-
-While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js (See Figure 4.x)
+While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js .
 
 <!-- Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023]. Phaser starting templates available from the website share this aim of providing scaffolding by providing a downloadable zip of files which when extracted are already interlinked correctly [^5].
+While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js .
 
 Game states and functions to create the game loop (see glossary) are included natively in the phaser framework [@faas_introduction_2017]. Game states allow designers to deconstruct games and game code into collections of sub-units (states)   [@kostolny_digital_2017]. For example a simple arcade games may only had an insert coin state, a play state and a game over state. A game coding framework like phaser shields its users from code complexity by providing a game state manager and associated functions out-of-the-box, meaning that lots of underlying code is already written and hidden from view. To increase simplicity for my participants the starting template I created had only one game state called _PlayState_. It followed the following structure: a beginning section out side of a function declaring variables; a preload function which loads assets into the game; a create function which sets up the initial game; an update function which listens to and responds to user input. The following illustration from the step-based instructions illustrates the structure for participants, including the possibility to create new game states e.g. a game over state.
 
@@ -688,9 +696,9 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
 
-
-
 The starting template began with the game in a broken state thus inviting players to modify the game to fix it. The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure above). In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
+
+The process here began with me imagining what would be a good feature that players would notice and be spurred to change. Here, the deliberately unsuitable game variable is a key affordance of this half-baked game template. Descriptions of other key affodances follow (NOT GRAPHICS NOW? ADD A MENTION?).
 
 <!-- Descriptions of three design techniques to the template to make quick modification of the game easier follow. -->
 <!-- I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.  -->
@@ -698,6 +706,14 @@ The starting template began with the game in a broken state thus inviting player
 background colour of the game
 game layout of the platforms - hazards and food to collect. -->
 
+#### Simple block graphics
+
+The use of blocks of text invited
+Their size of 32 x 32 was also design to reduce friction in teh creative process as this was the default size of Piskel.
+
+One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of many small technical alignments which addressed and helped resolve practical obstacles that participants experienced.
+
+NOTE - Make link with later section  
 
 #### Level design and prototyping
 
@@ -785,7 +801,7 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 The literature review outlined that one of the key principles of constructionist approach is promoting community inspiration and interaction. In the Scratch community this is achieved through and extensive online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016].
 
-The shared community element on the other hand was quite different for glitch.com web playground tool due to its very mixed user base and range of different web based projects. In this learning design I took a decision to not promote this online community as a source of inspiration and code bases. Instead one code base was promoted. Sharing of ideas and inspiration did happen both on the playtesting of each others games and via incidental exposure to the online work of others. This happened as they shared log account details and thus when logging in to access their own work they would also see and have access to the code and graphical creations of others. I took advantage of this shared access in shared social and playful missions which are described later in this chapter.
+The shared community element on the other hand was quite different for glitch.com web playground tool due to its very mixed user base and range of different web based projects. In this learning design I took a decision to not promote this online community as a source of inspiration and code bases. Instead one code base was promoted. Sharing of ideas and inspiration did happen both on the playtesting of each others games and via incidental exposure to the online work of others. This happened as they shared log account details and thus when logging in to access their own work they would also see and have access to the code and graphical creations of others. I took advantage of this shared access in shared socThus  affordance ial and playful missions which are described later in this chapter.
 
 #### Addressing code syntax errors
 
