--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -29,6 +29,7 @@
             template](#using-a-starter-game-template)
             -   [Variable editing for player
                 movement](#variable-editing-for-player-movement)
+            -   [Simple block graphics](#simple-block-graphics)
             -   [Level design and
                 prototyping](#level-design-and-prototyping)
         -   [Design adaptations to facilitate novice use of a code
