ch 4 dimensions of agency

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -1672,8 +1672,20 @@ or this one
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit -->
 
 
+#### Exploring dimensions of these barriers through the lens of agency and authenticity
+
+Briefly outline, the relationship of agency and authenticity in relation to AT and other relevant literature pbl?
+NOTE IS THERE OBVIOUS SPACE FOR THIS OR SOMETHING TO SURFACE IN Discussion
+
+Some barriers outlined were addressed in a way which created adaptions to the design which facilitated participation by making the process more supported.  These include ; unfamiliarity with coding concepts,
+
+This can be conceived of broadly as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
+
+Other tensions relate to the development of authorial agency.
+
 
 ### Link to next chapter
+
 
 <!-- This chapter charts the evolution of tools and resources which occupy a middle ground between instruction and free choice creative approaches.  -->
 
