Additional tensions / barrier which are more authorial / transformative in nature

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -1659,6 +1659,12 @@ The following summary table lists barriers and tensions drawn from the literatur
 | Tension between producing extensive and varied documentation to support the different design choices of users and the increased complexity of navigation of the learning experience this brings  | The process of finding and following documentation was patchy   |  Resources were provided in a menu form linking to both code snippets and instructions |
 
 
+There's a tension of not wanting to jump in to teach CT concepts, or to force reflection on progress. Understandable not to want to interupt flow. It is not needed in terms of testing or curriculum here. This is an adaption where I project into the experience of participants and pick up on reluctance to step away from the ongoing coding and creative or playful tasks at hand. I adapted to end of session reflection on most sessions. I also did not draw attention to extra resources outlining formal frameworks. Although step by step instructions which did outline them in situ were available.
+Here I worked to remove barriers to accessing CT as a framework via resource creation which aligned to experience. But their agency is expressed through disinterest and reluctance in participation. This transform conceptions of the activity as I give up CT as a framework which guides the objective. Instead using GDPS as one more aligned with their interests and need to develop fluency in non-conceptual coding practices.
+
+Also, the drama frame was able to address of of the tensions which emerge - but these are mention only in summary here as they are explored in more depth in discussion in chater six. 
+
+
 <!-- | Barriers to comprehending the complexity of game code template   | The use of preload, create and update functions   |  Outlining the structure in supporting resources and game to reinforce and test tacit knowledge in a playful way | -->
 
 <!-- NOTE Not included
@@ -1674,14 +1680,19 @@ https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/
 
 #### Exploring dimensions of these barriers through the lens of agency and authenticity
 
-Briefly outline, the relationship of agency and authenticity in relation to AT and other relevant literature pbl?
-NOTE IS THERE OBVIOUS SPACE FOR THIS OR SOMETHING TO SURFACE IN Discussion
+Briefly outline, the relationship of agency and (authenticity in relation to AT and other relevant literature pbl)?
 
-Some barriers outlined were addressed in a way which created adaptions to the design which facilitated participation by making the process more supported.  These include ; unfamiliarity with coding concepts,
+Focus on agency.
+And springboarding to the next two chapters.
 
-This can be conceived of broadly as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
+<!-- NOTE IS THERE OBVIOUS SPACE FOR THIS OR SOMETHING TO SURFACE IN Discussion -->
 
-Other tensions relate to the development of authorial agency.
+Some barriers outlined were addressed in a way which created adaptions to the design which facilitated participation by making the process more supported. These include ; unfamiliarity with coding concepts,
+
+The adaptations of to these tools can be conceived of as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
+
+Other tensions were resolved with more fundamental shifts to the overall structure of the activity which can be said to align more closely with the concept of transformative (authorial agency)  agency. IS THIS TRUE - NOT MUCH IS IN THE TABLE ABOVE - WHAT ARE EXAMPLES?
+EXAMPLES ALIGN BETTER WITH EMERGENT USE OF GDP CODED IN NEXT CHAPTER - SO PERHAPS CONTRAST THIS AND USE AS THE TRANSITION.
 
 
 ### Link to next chapter
