--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -450,7 +450,9 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 <!-- - Tools: Specifics on Code Playgrounds and Phaser and a Javascript framework -->
 <!-- - the media literacy practices of transfer between tools - similar to other studies - see guided participation papers -->
 
-## The role of GDPs in the personal appropriation of computational, design and systems concepts
+## The role of GDPs in the personal appropriation of concepts and processes
+
+**computational, design and systems concepts**
 
 
 <!-- While the contextual factors involved in this learning environment did not require alignment with a particular curriculum or external examination, computing, design and systems concepts have the potential to arise as part of the game making process. -->
@@ -1428,7 +1430,7 @@ RECAP ON WHAT AGENCY IS HERE? OR NEXT CHAPTER?
 
 #### GDPs used in mediational strategies and impact on participant agency
 
-WHAT IS THE FUNDAMENTAL POINT HERE AND HOW DOES IT TRANSITION TO THE NEXT CHAPTER? 
+WHAT IS THE FUNDAMENTAL POINT HERE AND HOW DOES IT TRANSITION TO THE NEXT CHAPTER?
 
 GDPs are frequently used as mediational strategies [@lecusay_telementoring_2015].
 
