--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -1081,9 +1081,11 @@ Code patching is a processes which is suggested by the UMC process, not explicit
 
 #### GDPs used to nurture tactical responses to coding errors
 
-NOTE - rewrite the below highlighting the possibility of highlighting different possible errors and responses helped by the high level of context present in GDP framing
+This section highlights different possible errors and notes that responses are helped by the high level of context present in the use of GDP as a structural design framework.
 
-In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing. I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
+In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing.
+
+I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
 
 Some blockages were non-technical including hunger or grumpyness between participants, others were due to lack of access to the right tools or understanding of processes, others were particular types of coding error. I propose that more granular understanding of different kinds of design blocks can help facilitators and ultimately learners in building agency in their response to them.
 
