element moved to design

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -1083,11 +1083,8 @@ Code patching is a processes which is suggested by the UMC process, not explicit
 
 This section highlights different possible errors and notes that responses are helped by the high level of context present in the use of GDP as a structural design framework.
 
-In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing.
+In analysis of journal notes and recorded screens I began to identify different kinds of coding problems that blocked participants from progressing.
 
-I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
-
-Some blockages were non-technical including hunger or grumpyness between participants, others were due to lack of access to the right tools or understanding of processes, others were particular types of coding error. I propose that more granular understanding of different kinds of design blocks can help facilitators and ultimately learners in building agency in their response to them.
 
 In critique of online tutorials researchers note  few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
 
