adding in GDP table

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -139,6 +139,10 @@ This chapter begins with re-examining of game play design patterns as a unit of 
 <!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
 
+and the GDP elements can be represented as table here
+
+https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
+
 Also the RQ questions which answered
 https://docs.google.com/document/d/1RZnznbR4HKrgL8VFfIqoCrCAJM0mf_sM8iEN4KCGeZ4/edit
 
@@ -1490,7 +1494,8 @@ While their results on the advantages and challenges of patterns use focus princ
 The use of GDPs by participants has been outlined in this chapter. A summary is included in Table 6.x
 
 SUMMARY TABLE HERE -
-https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/edit
+https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
+
 
 This table can be developed by adding a column  use perspective of agency and affordances in processes)"
 
