moving some data out of final chapter to methodlolgy

--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -78,4 +78,7 @@
     -   [Chapter Discussion](#chapter-discussion)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
+            -   [Exploring dimensions of these barriers through the lens
+                of agency and
+                authenticity](#exploring-dimensions-of-these-barriers-through-the-lens-of-agency-and-authenticity)
         -   [Link to next chapter](#link-to-next-chapter)
