--- a/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
@@ -15,9 +15,8 @@
     -   [Observations and analysis of use of Game Design Patterns (GDPs)
         by
         participants](#observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants)
-    -   [The role of GDPs in the personal appropriation of
-        computational, design and systems
-        concepts](#the-role-of-gdps-in-the-personal-appropriation-of-computational-design-and-systems-concepts)
+    -   [The role of GDPs in the personal appropriation of concepts and
+        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
         -   [GDPs offer the potential to assist project navigation,
