--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -548,7 +548,20 @@ The tension between of participant choice and use and providing appropriate scaf
 
 The vignette in this chapter shows the parent following the child's desire to implement a GDP using a step by step tutorial. The vignette of the chapter four showed Toby copying a code example which he chose from a graphical menu of patterns. The previous chapter also outlined the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. These varied forms of scaffolding represent different approaches to supporting the process of making alterations to the code inline with a use-modify-create (UMC) approach.
 
-In addition to use of printed or online resources, this chapter will explore how varied forms of help between peer participants also became important process of the game making community from early stages.  Later sections explore varied strategies used to implement GDPs including, informal propagation of GDPs as a result of playtesting, the development of specialists division of labour and
+NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE?
+
+
+NOTE -
+While GDPs emerged as a natural response fr the participants when requesting onding help, it is important to note that from P2 onwards, because the learning resources I created were themed on GDPs, it follows that many request for help would be oriented around this framework.
+Thus the following observations bear this caveat but still show potential. 
+
+DATA CALL HERE - Examples from the data of participants using GDPs as a framework for organisation and project navigations.
+
+
+
+
+
+dOES THIS FIT HERE? In addition to use of printed or online resources, this chapter will explore how varied forms of help between peer participants also became important process of the game making community from early stages.  Later sections explore varied strategies used to implement GDPs including, informal propagation of GDPs as a result of playtesting, the development of specialists division of labour and
 
 However, despite this variety, this chapter will explore how the evolving collection of GDPs acted as a base for the variety of approaches that emerged from it. To do this, the following sections explore different uses of game design patterns.
 
