gdp and framework for facilitators

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -479,7 +479,7 @@ This can help justify activities in formal contexts as per Bevan and Petrich's w
 
 <!-- , I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting. -->
 
-I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP.
+I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower stoill of completing one of several actions to complete the implementation of a GDP.
 
 <!-- In the language of activity theory the change of objective denotes is a shift in scope of the activity system. -->
 
@@ -553,7 +553,7 @@ NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE?
 
 NOTE -
 While GDPs emerged as a natural response fr the participants when requesting onding help, it is important to note that from P2 onwards, because the learning resources I created were themed on GDPs, it follows that many request for help would be oriented around this framework.
-Thus the following observations bear this caveat but still show potential. 
+Thus the following observations bear this caveat but still show potential.
 
 DATA CALL HERE - Examples from the data of participants using GDPs as a framework for organisation and project navigations.
 
